<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textIngreso" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10mm"
            android:paddingRight="10mm"
            android:text="@string/textUsuario" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="Username"
            android:paddingLeft="1dp"
            android:paddingRight="10mm" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="10mm"
            android:paddingRight="7mm"
            android:text="@string/textContrasenia" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="Password"
            android:paddingLeft="1dp"
            android:paddingRight="10mm" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/botonAceptar"
            android:textAllCaps="false">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/botonCancelar"
            android:textAllCaps="false">

        </Button>

    </LinearLayout>


</LinearLayout>